terminado sobre modularização, lazy loading, gerenciamento de erros e ESlint para deixar codigo mais limpo

--- a/buscas/3413-jornada-milhas-aula-3/angular.json
+++ b/buscas/3413-jornada-milhas-aula-3/angular.json
@@ -105,11 +105,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "c08ab718-3803-4869-85cf-85b1b76a31cd"
+    "analytics": "c08ab718-3803-4869-85cf-85b1b76a31cd",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
